app/static/style.css
/* General */
body, p, a, li {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 14pt;
    font-weight: 400;
}
html {
    scroll-behavior: smooth;
  }
h1, h2, h3, h4, h5, h6 {
    font-family: Poppins, Arial, sans-serif;
}
h2{
    font-size: 24pt;
    font-weight: bold;
}

h3{
    font-size: 18pt;
    font-weight: normal;
}

p, div{
    color: #464646;
}

/* medium and larger screens */
@media only screen and (min-width: 640px) {
    body, p, a, li {
        font-size: 18pt;
    }
    h2{
        font-size: 32pt;
        font-weight: bold;
    }
    
    h3{
        font-size: 20pt;
        font-weight: normal;
    }
}

.brand--color{
    color: #1DD069;
}

.white--color{
    color: #ffffff;
}

.ystack{
    flex-direction: column;
}

.center--align{
    display: flex;
    justify-content: center;
    align-items: center;
}

.right--align{
    display: flex;
    align-items: center;
    justify-content: right;

}

.left--align{
    display: flex;
    align-items: center;
    justify-content: left;

}

/* evanescent tabs */
.opt--content{
    display: none;
}

.selected--opt--content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-item: center;

}

/* Gauge */

.GaugeMeter{
    Position: Relative;
    Text-Align: Center;
    Overflow: Hidden;
    Cursor: Default;
}

.GaugeMeter SPAN,
.GaugeMeter B{
    Margin:	0 23%;
    Width: 54%;
    Position: Absolute;
    Text-Align: Center;
    Display: flex;
    justify-content: center;
    Color: #464646;
}
.GaugeMeter[data-style="Semi"] B{
    Margin: 0 10%;
    Width: 80%;
}

.GaugeMeter S,
.GaugeMeter U{
    Text-Decoration:None;
    Font-Size: .60em;
    Font-Weight: 200;
    Opacity: .6;
}

.GaugeMeter B{
    Font-Weight: 200;
    Font-Size: 1.2em;
    Opacity: .8;
}

.GaugeMeter SPAN{
    Color: #464646;
    font-weight: bold;
    font-size: 32pt;
    font-family: Poppins Medium;
}



/* Navigation Bar */

header{
    background-color: #ffffff;
}

header div{
    display: flex;
    align-items: center;
}

header h2{
    color: #ffbb00;
    font-size: 18pt;
    font-weight: bold;
}

#header-blitz-div img{
    height: 3rem;
}

#header-blitz-div a{
    display: flex;
    align-items: center;
}

header img{
    margin-right: 1rem;
    height: 2.5rem;
}

header a{
    color: #464646;
    font-size: 20pt;
    font-weight: normal;
}

#header-logo-nigeria{
    margin-right: 0;
    padding: 0.5rem 0 0.5rem 0 ;
    height: 5rem;
}

/* Main content */
.cta,
.cta:hover,
.cta:focus,
.cta:active {
    display: block;
    width: fit-content;
    width: -moz-fit-content;
    background-color: #1DD069;
    color: #ffffff;
    font-size: 18pt;
    font-weight: bold;
    padding: 10px 30px 10px 30px;
    border-radius: 4px;
}

.cta {
    -webkit-transition: all .2s ease-in;
    transition: all .2s ease-in;
}

.cta:hover,
.cta:focus,
.cta:active {
    transform: translateY(-3px);
    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
    cursor: pointer;
}

.landing-hero {
    background-image: url("img/img-1-landing.png");
    height: 100vh;
    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}
.landing-hero h1 {
    font-size: 30pt;
    font-weight: bold;
    color: #ffffff;
    line-height: 40pt;
    padding-top: 3rem;
    margin-bottom: 0;
}

.landing-hero h2 {
    font-size: 16pt;
    font-weight: normal;
    color: #ffffff;
    margin-top: 1rem;
    margin-bottom: 5rem;
}

/* smaller screens */
@media only screen and (max-width: 640px) {
    section {
        padding-left: .5rem;
        padding-right: .5rem;
    }
}

/* medium and larger screens */
@media only screen and (min-width: 640px) {
    .landing-hero {
        height: 75vh;
    }
    .landing-hero h1 {
        font-size: 40pt;
        line-height: 52pt;
        padding-top: 4rem;
    }
    .landing-hero h2 {
        font-size: 18pt;
        margin-bottom: 6rem;
    }
}

/* larger screens */
@media only screen and (min-width: 1000px) {
    .landing-hero h1,
    .landing-hero h2 {
        width: 54rem;
    }
    .landing-hero h1 {
        font-size: 50pt;
        line-height: 68pt;
        padding-top: 5rem;
    }
    .landing-hero h2 {
        font-size: 20pt;
        margin-bottom: 8rem;
    }
}

.landing-welcome {
    background-image: url("background/bg-1-welcome-div.png");
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-welcome__img img {
    padding-left: 5rem;
}

.landing-feature {
    background-image: url("img/img-3-feature-developper.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-feature h2,
.landing-feature p {
    color: #FFF;
}

.landing-feature h2 {
    font-weight: 400;
}

.landing-feature h2 span {
    font-weight: 700;
}

.landing-feature__text {
    margin: 0 auto;
}

.landing-feature__item {
    padding-top: 7rem;
}

.landing-feature__img {
    margin: 0 auto;
    height: 3rem;
    width: 3rem;
    border-radius: 100px;
    background-color: grey;
}
.landing-feature__img img {
    height: 1.5rem;
    margin-top: .5rem;
}
.landing-feature__description a {
    font-size: 15pt;
    color: #FFF;
}
.landing-feature__item.active .landing-feature__img {
    background-color: #1DD069;
}
.landing-feature__item.active a {
    font-weight: 700;
}


.landing-feature__arrow div {
    margin: 0 auto;
}
.landing-feature__arrow img {
    width: 2rem;
}


.landing-progress {
    background-image: url("background/bg-4-progress-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 5rem;
}

.landing-maps {
    background-image: url("background/bg-2-maps-div.png");
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 3rem;
    padding-bottom: 3rem;
}
/* ... */

